# opentrack

csv/: csv.cpp  csv.h
tracker-neuralnet/: CMakeLists.txt  ftnoir_tracker_neuralnet.cpp  ftnoir_tracker_neuralnet.h  neuralnet-trackercontrols.ui
tracker-neuralnet/lang/: nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
tracker-neuralnet/models/: head-localizer.onnx
